istio/siege.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: siege-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: siege
    spec:
      containers:
        - name: siege
          image: yokogawa/siege
          command: ["tail"]
          args: ["-f", "/dev/null"]
      nodeSelector:
        beta.kubernetes.io/os: linux
