istio/canaryCookie.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-canary
spec:
  hosts:
  - myweb-service
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(usertype=tester)(;.*)?$"
    route:
      - destination:
          host: myweb-service
          subset: v2
  - route:
    - destination:
        host: myweb-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-canary
spec:
  host: myweb-service
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
