istio/copyVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: retry-vs
spec:
  hosts:
    - retry-service
  http:
  - route:
    - destination:
        host: retry-service
    mirror:
      host: sniffer
