istio/lbHeaderHash.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-lb
spec:
  hosts:
  - myweb-service
  http:
  - route:
    - destination:
        host: myweb-service
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-lb
spec:
  host: myweb-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: User
  subsets:
  - name: v1
    labels:
      version: v1
