istio/retryVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: retry-vs
spec:
  hosts:
  - retry-service
  http:
  - route:
    - destination:
        host: retry-service
    timeout: 30s
    retries:
      attempts: 30
      perTryTimeout: 1s
